# FastApi-Blog

./: .gitignore  Dockerfile  README.md  auth.py  aws_bucket_policy.json  aws_iam_policy.json  config.py  database.py  docker-compose.yml  email_utils.py  entrypoint.sh  image_utils.py  main.py  models.py  populate_db_for_S3.py  pyproject.toml  schemas.py
alembic/versions/: 3bac05b529b5_add_comments_table.py  4224366c8b04_initial.py  631867c70cc0_initial_schema.py  6d9ba3a8cca3_add_likes_to_post.py  74f83367da49_initial_migration.py
routers/: posts.py  users.py
static/css/: main.css
static/js/: comments.js  likes.js  utils.js
templates/: home.html  layout.html  post.html  user_posts.html
tests/: conftest.py  test_comments.py  test_posts.py  test_upload_profile_picture_local.py  test_upload_profile_picture_s3.py  test_users.py
